# moscow-public-transport

./: README.md  pyproject.toml
examples/: 1_assign_actual_arrival_time.py  2_visualize_actual_arrival_bus_stop.py  3_visualize_actual_arrival_by_transport.py  explore_desired_item.py  explore_sqlite_file.py  slide_2_stops_map.py  slide_3_route_with_stops_raw.py  slide_4_route_with_stops_preprocessed.py  slide_5_route_with_stops_comparison.py  slide_6_7_actual_arrival_transport_at_stop.py  slide_6_calculate_arrival_time.py  slide_8_actual_time_map.py
examples/old/: visualize_actual_arrival_by_transport.py
mostra/: convert.py  data_structure.py  distances.py  main.py  paths.py  plots.py  preprocessing.py
mostra/routes/: routes_with_stops.py
